# QtSdlTest

./: LICENSE.txt  QtSdlTest.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meson.build  sdlaxiswidget.cpp  sdlaxiswidget.h  sdleventthread.cpp  sdleventthread.h  sdlpovwidget.cpp  sdlpovwidget.h  sdlsliderwidget.cpp  sdlsliderwidget.h
